--- a/public/style.css
+++ b/public/style.css
@@ -203,6 +203,15 @@ footer p {
 	border-radius: 5px;
 	color: white;
 }
+.btn-x{
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	border: none;
+	cursor: pointer;
+	background-color: transparent;
+	font-size: 1.2em;
+}
 #modal::backdrop {
 	background: rgba(0, 0, 0, 0.8);
 }
