--- a/public/style.css
+++ b/public/style.css
@@ -337,3 +337,30 @@ dialog.cerrando {
 .carrusel-box img {
     border-radius: 10px;
 }
+
+#tablaProductos {
+    width: 95%;
+    margin: 20px auto;
+    background: rgba(255,255,255,0.85);
+    border-radius: 10px;
+    border: 2px solid #600000;
+}
+
+#tablaProductos th {
+    background: #790A07;
+    color: white;
+    text-shadow: 0 0 4px black;
+}
+
+#tablaProductos td {
+    background: rgba(255,255,255,0.85);
+    padding: 10px;
+}
+
+#tablaProductos img {
+    width: 60px;
+    height: 60px;
+    object-fit: cover;
+    border-radius: 6px;
+    border: 2px solid #790A07;
+}
